@@ -1,3 +1,7 @@
+2002-09-19  Sven Herzberg <herzi@gnome-de.org>
+
+	* db/online/erweitern.php: Added debugging code.
+
 2002-09-18  Christian Meyer  <chrisime@gnome.org>
 
 	* db/online/suchen.php: Made the code more beautiful.
